--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Beagle</title>
     <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/4843/4843781.png">
     <link rel="stylesheet" type="text/css" href="style.css"/>
+    </head>
 <body> 
     <section>     
        <div style="border-style: solid; border: 2px solid #000000;">
